syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message DataSet {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue external_id = 2;
    google.protobuf.StringValue name = 3;
    google.protobuf.StringValue description = 4;
    google.protobuf.BoolValue write_protected = 5;
    google.protobuf.Int64Value created_time = 6;
    google.protobuf.Int64Value last_updated_time = 7;
    map<string, string> metadata = 8;
}
